# U1F4E7

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SKILL.md  VISION.md  demo_agent.py  pyproject.toml  railway.toml  requirements.txt  server.json  start-server.sh
.github/workflows/: ci.yml  claude.yml
agents/: PROTOCOL.md
agents/backlog/: backlog-story-001-smtp-send-transport.md  backlog-story-002-imap-read.md  backlog-story-003-credential-management.md  backlog-story-004-send-tracking.md  backlog-story-005-reply-threading.md  backlog-story-009-drafts.md
app/: db.py  discovery.py  drafts.py  main.py  mcp.py  messages.py
app/agent/: embeddings.py  inbox_agent.py  knowledge.py  llm.py  prompts.py
app/credentials/: crypto.py  store.py
app/services/: __init__.py  actions.py  compose.py  policy.py  scoring.py  start_here.py
app/transport/: imap.py  pool.py  smtp.py  webhook.py  (+1 more)
ci/: check-orphans.sh
cli/: config.py  main.py
crates/dashboard/: Cargo.toml
crates/dashboard/src/: assets.rs  lib.rs  state.rs
crates/dashboard/src/handlers/: accounts.rs  attachments.rs  compose.rs  drafts.rs  folders.rs  messages.rs  mod.rs  snoozed.rs  stats.rs  threads.rs
crates/dashboard/static/: dashboard.css  dashboard.js  index.html
docs/: ORPHANS-AUDIT.md
envelope_email.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: package-release.sh
static/: dashboard.js  review.js
templates/: index.html  review.html
tests/: conftest.py  test_agent.py  test_app.py  test_attachments.py  test_cli.py  test_discovery.py  test_drafts.py  test_embeddings.py  test_imap.py  test_inbox.py  test_llm.py  test_mcp.py  test_pool.py  test_webhook.py  test_worker.py
(+69 files in other folders)
