[project]
name = "envelope-email"
version = "0.4.0"
description = "BYO mailbox API with agent-native primitives"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "aiosmtplib>=5.1.0",
    "aioimaplib>=2.0.1",
    "cryptography>=44.0.3",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "Jinja2>=3.1.6",
    "mcp>=1.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "rich>=13",
]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "httpx>=0.28.1",
]

[project.scripts]
envelope = "cli.main:app"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
