# Copyright (c) 2026 Tyler Martin
# Licensed under FSL-1.1-ALv2 (see LICENSE)

[package]
name = "envelope-email-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Localhost email client dashboard — inbox, read, compose, reply, drafts, snooze, threads"

[dependencies]
envelope-email-store = { path = "../store" }
envelope-email-transport = { path = "../email" }

axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
base64.workspace = true
futures-util.workspace = true

rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"
